2004-02-13  Johan Ceuppens  <jceuppen@easynet.be>
	
	* src/inkjar/[jar.cpp|jar.h]: changed some file offsets,
	uncompressing multiple files in a jar works now. There
	is an improved testing program at the end of jar.cpp.
	
2004-02-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/seltrans.cpp (sp_sel_trans_update_volatile_state):
	Minor cleanups.

	* src/desktop-snap.h, src/desktop-snap.cpp
	(sp_desktop_horizontal_snap, sp_desktop_vertical_snap,
	sp_desktop_horizontal_snap_list_scale,
	sp_desktop_vertical_snap_list_scale,
	sp_desktop_horizontal_snap_list_skew,
	sp_desktop_vertical_snap_list_skew):
	Remove these now-unused functions.

	* src/arc-context.cpp (sp_arc_drag):
	* src/rect-context.cpp (sp_rect_drag):
	Simplification: use sp_desktop_dim_snap instead of
	sp_desktop_horizontal_snap / sp_desktop_vertical_snap.

	* src/desktop-snap.cpp (sp_desktop_vector_snap): Minor cleanups.

	* src/libnr/Makefile.am, src/libnr/nr-point-fns-test.cpp:
	New unit test file nr-point-fns-test.cpp.

	* src/libnr/nr-point-fns.h, src/libnr/nr-point-fns.cpp (unit_vector):
	New function.

	* src/livarot/Path.h: Trim unnecessary includes.

	* src/livarot/LivarotDefs.h: #include <stdint.h> (moved from Path.h).

	* src/livarot/PathOutline.cpp, src/livarot/PathSimplify.cpp,
	src/livarot/PathStroke.cpp, src/sp-offset.cpp:
	#include libnr/nr-point-fns.h.

2004-02-12  MenTaLguY <mental@rydia.net>

	* src/xml/repr-util.cpp, src/xml/repr.h: pruned some obsolete
	  functions

2004-02-12  Johan Ceuppens  <jceuppen@easynet.be>
	
	* configure.in src/Makefile.am: --with-inkjar (default no)
	* src/inkjar/Makefile.am src/inkjar/jar.cpp src/inkjar/jar.h:
	inital import of libinkjar, this can be moved to LGPL after
	rewriting the macros.

2004-02-11  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/seltrans.cpp (sp_sel_trans_handle_new_event,
	sp_sel_trans_handle_request): NR::Point'ification.

	* src/seltrans-handles.cpp, src/seltrans-handles.h, src/seltrans.cpp: 