@@ -1,3 +1,10 @@
+2004-02-13  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/seltrans.cpp (sp_show_handles): Add precondition !seltrans.empty.
+	* src/proofs: Update accordingly.
+	* src/seltrans.cpp: Change seltrans from pointer to reference in
+	several places.
+
 2004-02-13  Johan Ceuppens  <jceuppen@easynet.be>
 	
 	* src/inkjar/[jar.cpp|jar.h]: changed some file offsets,
